MOSIP-32454: Merging java21 changes (#648)
* MOSIP-32454: Java21 Migration

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* MOSIP-32454: Java21 Migration (#633)

* MOSIP-32454: Java21 Migration

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Added version to registration-api

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Added version to registration-client pom

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Added versions in pom files

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Changes in pom file

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

---------

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>
Co-authored-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* MOSIP-32454: Upgraded JavaFX version (#634)

* MOSIP-32454: Java21 Migration

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Added version to registration-api

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Added version to registration-client pom

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Added versions in pom files

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* Changes in pom file

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* MOSIP-32454: Upgraded JavaFX version

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

---------

Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>
Co-authored-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>

* MOSIP-32454: Version changes in Dockerfile and configure.sh (#638)

* MOSIP-32454: Java21 Migration

Si